netrunner agency + more

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1856,7 +1856,7 @@ l_english:
 	building_tec_pleasure_palace:0 "Palace of Desire"
 	building_tec_pleasure_palace_plural:0 "Palaces of Desire"
 	building_tec_pleasure_palace_desc:0 "Opulence, riches, pleasure ... whatever you need, whatever you want, you will find it here."
-	building_tec_pleasure_palace_effect:0 "This building is more effective with extra §Y$tec_loc_planet_ascensions$§!"
+	building_tec_pleasure_palace_effect:0 ""
 
 	job_tec_pleasure_giver:0 "Pleasure Giver"
 	job_tec_pleasure_giver_plural:0 "Pleasure Giver"
@@ -1867,6 +1867,39 @@ l_english:
 	mod_job_tec_pleasure_giver_add:0 "$job_tec_pleasure_giver$ Jobs"
 	mod_job_tec_pleasure_giver_per_pop:0 "§G+1§! $job_tec_pleasure_giver$ Job Per $VALUE$ Pops"
 	mod_job_tec_pleasure_giver_per_pop_short:0 "\n§G+1§! £job_tec_pleasure_giver£ per $VALUE$ £pop£"
+ # /
+ # Netrunners
+	building_tec_netrunner_enforcer_center:0 "Cybernet Center"
+	building_tec_netrunner_enforcer_center_plural:0 "$building_tec_netrunner_enforcer_center$s"
+	building_tec_netrunner_enforcer_center_desc:0 "Tracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\n\nTechnological Espionage Effect: §G+x§!"
+	building_tec_netrunner_enforcer_center_effect:0 "This $tec_loc_building$ tracks bonuses related to the jobs provided:\n\nTracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\nTechnological Espionage Effect: §G+x§!\n\n"
+	building_tec_netrunner_enforcer_center_effect_nopeek:0 "§RERROR§!: Unauthorized access detected - Signal impossible to track"
+
+	building_tec_netrunner_criminal_center:0 "Cybernet Hideout"
+	building_tec_netrunner_criminal_center_plural:0 "$building_tec_netrunner_criminal_center$s"
+	building_tec_netrunner_criminal_center_desc:0 "TO DO."
+	building_tec_netrunner_criminal_center_effect:0 "This $tec_loc_building$ tracks bonuses related to the jobs provided:\n\nTracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\nTechnological Espionage Effect: §G+x§!\n\n"
+	building_tec_netrunner_criminal_center_effect_nopeek:0 "§RERROR§!: Unauthorized access detected - Signal impossible to track"
+
+	job_tec_netrunner_enforcer:0 "Netrunner"
+	job_tec_netrunner_enforcer_plural:0 "$job_tec_netrunner_enforcer$s"
+	job_tec_netrunner_enforcer_desc:0 "Specialized net technicians selected and hired to protect the network and technological integrity of the empire, and the control of internal and external webs."
+	job_tec_netrunner_enforcer_effect_desc_standard:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y$tec_loc_amenities$§! (or $tec_loc_trade$) into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_technological_espionage$§! effects."
+	job_tec_netrunner_enforcer_effect_desc:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_technological_espionage$§! effects."
+	mod_job_tec_netrunner_enforcer_add:0 "$job_tec_netrunner_enforcer$ Jobs"
+	mod_job_tec_netrunner_enforcer_per_pop:0 "§G+1§! $job_tec_netrunner_enforcer$ Job Per $VALUE$ Pops"
+	mod_job_tec_netrunner_enforcer_per_pop_short:0 "\n§G+1§! £job_tec_netrunner_enforcer£ per $VALUE$ £pop£"
+
+	job_tec_netrunner_criminal:0 "Nethacker"
+	job_tec_netrunner_criminal_plural:0 "$job_tec_netrunner_criminal$s"
+	job_tec_netrunner_criminal_desc:0 "Obscure and generally secluded net specialists, these hackers control and know the workings of vast regions of internal and external networks, serving as valuable assets requiring... complicated concessions."
+	job_tec_netrunner_criminal_effect_desc_standard:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boost §Y$tec_loc_technological_espionage$§! effects but also produce extra §Y$tec_loc_crime$§!."
+	job_tec_netrunner_criminal_effect_desc:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boosting §Y$tec_loc_technological_espionage$§! effects but also produce extra §Y$tec_loc_crime$§!."
+	mod_job_tec_netrunner_criminal_add:0 "$job_tec_netrunner_criminal$ Jobs"
+	mod_job_tec_netrunner_criminal_per_pop:0 "§G+1§! $job_tec_netrunner_criminal$ Job Per $VALUE$ Pops"
+	mod_job_tec_netrunner_criminal_per_pop_short:0 "\n§G+1§! £job_tec_netrunner_criminal£ per $VALUE$ £pop£"
+
+
  # /
  # Zombies
 	building_tec_reanimation_necropoli_1:0 "Reanimation Halls"
