--- a/localisation/english/replace/zzzzzz_evolved_full_replace_l_english.yml
+++ b/localisation/english/replace/zzzzzz_evolved_full_replace_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
 # For strange cases where its absolutely needed
+# Some are extracted from the autogen DO NOT add them back roadd pls
 
 # Habitats
 # ------------------------------------------------------------
