--- a/localisation/english/zz_evolved_galcom_espionage_l_english.yml
+++ b/localisation/english/zz_evolved_galcom_espionage_l_english.yml
@@ -190,6 +190,21 @@
 
 # ------------------------------------------------- ESPIONAGE
  # --------------- Modifiers
+	tec_loc_espionage_technological:0 "Technological Espionage"
+	tec_loc_espionage_biological:0 "Biological Espionage"
+	tec_loc_espionage_psionics:0 "Psychological Espionage"
+
+	tec_loc_espionage_infiltration:0 "Infiltration Espionage"
+	tec_loc_espionage_political:0 "Political Espionage"
+	tec_loc_espionage_sabotage:0 "Sabotage Espionage"
+	tec_loc_espionage_warcrime:0 "War Espionage"
+
+	tec_loc_espionage_destructive:0 "Destructive Espionage"
+	tec_loc_espionage_cyberweapons:0 "Cyberwarfare Espionage"
+	tec_loc_espionage_bioweapons:0 "Bioweaponized Espionage"
+	tec_loc_espionage_nanoweapons:0 "Nanoweaponized Espionage"
+	tec_loc_espionage_terrorweapons:0 "Terror Attack"
+
 	mod_tec_espionage_technological_effect_mult:0 "Technological Espionage Strenght"
 	mod_tec_espionage_biological_effect_mult:0 "Biological Espionage Strenght"
 	mod_tec_espionage_psionics_effect_mult:0 "Psychological Espionage Strenght"
@@ -199,7 +214,7 @@
 	mod_tec_espionage_sabotage_effect_mult:0 "Sabotage Espionage Strenght"
 	mod_tec_espionage_warcrime_effect_mult:0 "War Espionage Strenght"
 
-	mod_tec_espionage_explosiveweapons_effect_mult:0 "Demolition Espionage Strenght"
+	mod_tec_espionage_destructive_effect_mult:0 "Destructive Espionage Strenght"
 	mod_tec_espionage_cyberweapons_effect_mult:0 "Cyberwarfare Espionage Strenght"
 	mod_tec_espionage_bioweapons_effect_mult:0 "Bioweaponized Espionage Strenght"
 	mod_tec_espionage_nanoweapons_effect_mult:0 "Nanoweaponized Espionage Strenght"
@@ -214,7 +229,7 @@
 	mod_tec_espionage_sabotage_defense_mult:0 "Sabotage Espionage Deflection"
 	mod_tec_espionage_warcrime_defense_mult:0 "War Espionage Deflection"
 
-	mod_tec_espionage_explosiveweapons_defense_mult:0 "Demolition Espionage Deflection"
+	mod_tec_espionage_destructive_defense_mult:0 "Destructive Espionage Deflection"
 	mod_tec_espionage_cyberweapons_defense_mult:0 "Cyberwarfare Espionage Deflection"
 	mod_tec_espionage_bioweapons_defense_mult:0 "Bioweaponized Espionage Deflection"
 	mod_tec_espionage_nanoweapons_defense_mult:0 "Nanoweaponized Espionage Deflection"
