--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -471,6 +471,13 @@
 	mod_councilor_ruler_democratic_exp_gain:0 "Ruler Experience Gain"
  # /
 
+ # Civics
+	country_modifier_tec_civic_tec_regular_netrunners:0 "Netrunner Agency"
+	country_modifier_tec_civic_tec_regular_netrunners_desc:0 "§LI'm in your walls§!"
+	country_modifier_tec_civic_tec_corporate_netrunners:0 "Netrunner Division"
+	country_modifier_tec_civic_tec_corporate_netrunners_desc:0 "§LI'm in your wallet§!"
+ # /
+
 
  tec_technoascendancy_base:0 "Technological Ascendancy"
  tec_technoascendancy_base_desc:0 "§EFuture awaits§!"
