loc fixes + modifiers

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1381,7 +1381,7 @@ l_english:
 	job_tec_overmind_drone:0 "Overmind Drone"
 	job_tec_overmind_drone_plural:0 "Overmind Drones"
 	job_tec_overmind_drone_desc:0 "Overminds are the top of the drone hierarchy, a direct manifestation of the hiveminds consciousness and, in fact, a direct part of it physically produced to control an entire planet."
-	job_tec_overmind_drone_effect_desc:0 "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$ consume large amounts of $tec_loc_basic_resources$ generating §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and boosting both £job£ §YDrone Output§! and §YUpkeep§!."
+	job_tec_overmind_drone_effect_desc:0 "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$ consume large amounts of $tec_loc_basic_resources$ to generate §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and boost both £job£ §YDrone Output§! and §YUpkeep§!."
 	mod_job_tec_overmind_drone_add:0 "$job_tec_overmind_drone$ Jobs"
 	mod_job_tec_overmind_drone_per_pop:0 "§G+1§! $job_tec_overmind_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_overmind_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_overmind_drone_add£ per $VALUE$ £pop£"
@@ -1884,8 +1884,8 @@ l_english:
 	job_tec_netrunner_enforcer:0 "Netrunner"
 	job_tec_netrunner_enforcer_plural:0 "$job_tec_netrunner_enforcer$s"
 	job_tec_netrunner_enforcer_desc:0 "Specialized net technicians selected and hired to protect the network and technological integrity of the empire, and the control of internal and external webs."
-	job_tec_netrunner_enforcer_effect_desc_standard:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y$tec_loc_amenities$§! (or $tec_loc_trade$) into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_technological_espionage$§! effects."
-	job_tec_netrunner_enforcer_effect_desc:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_technological_espionage$§! effects."
+	job_tec_netrunner_enforcer_effect_desc_standard:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y$tec_loc_amenities$§! (or $tec_loc_trade$) into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_espionage_technological$§! effects."
+	job_tec_netrunner_enforcer_effect_desc:0 "£job_tec_netrunner_enforcer£ $job_tec_netrunner_enforcer_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, decrease §Y$tec_loc_crime$§! and boost §Y$tec_loc_espionage_technological$§! effects."
 	mod_job_tec_netrunner_enforcer_add:0 "$job_tec_netrunner_enforcer$ Jobs"
 	mod_job_tec_netrunner_enforcer_per_pop:0 "§G+1§! $job_tec_netrunner_enforcer$ Job Per $VALUE$ Pops"
 	mod_job_tec_netrunner_enforcer_per_pop_short:0 "\n§G+1§! £job_tec_netrunner_enforcer£ per $VALUE$ £pop£"
@@ -1893,8 +1893,8 @@ l_english:
 	job_tec_netrunner_criminal:0 "Nethacker"
 	job_tec_netrunner_criminal_plural:0 "$job_tec_netrunner_criminal$s"
 	job_tec_netrunner_criminal_desc:0 "Obscure and generally secluded net specialists, these hackers control and know the workings of vast regions of internal and external networks, serving as valuable assets requiring... complicated concessions."
-	job_tec_netrunner_criminal_effect_desc_standard:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boost §Y$tec_loc_technological_espionage$§! effects but also produce extra §Y$tec_loc_crime$§!."
-	job_tec_netrunner_criminal_effect_desc:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boosting §Y$tec_loc_technological_espionage$§! effects but also produce extra §Y$tec_loc_crime$§!."
+	job_tec_netrunner_criminal_effect_desc_standard:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boost §Y$tec_loc_espionage_technological$§! effects but also produce extra §Y$tec_loc_crime$§!."
+	job_tec_netrunner_criminal_effect_desc:0 "£job_tec_netrunner_criminal£ $job_tec_netrunner_criminal_plural$ generate §Y£physics£ Physics§! and §Y£engineering£ Engineering Research§!, greatly boost §Y$tec_loc_espionage_technological$§! effects but also produce extra §Y$tec_loc_crime$§!."
 	mod_job_tec_netrunner_criminal_add:0 "$job_tec_netrunner_criminal$ Jobs"
 	mod_job_tec_netrunner_criminal_per_pop:0 "§G+1§! $job_tec_netrunner_criminal$ Job Per $VALUE$ Pops"
 	mod_job_tec_netrunner_criminal_per_pop_short:0 "\n§G+1§! £job_tec_netrunner_criminal£ per $VALUE$ £pop£"
