--- a/localisation/english/zz_evolved_galcom_espionage_l_english.yml
+++ b/localisation/english/zz_evolved_galcom_espionage_l_english.yml
@@ -205,20 +205,20 @@
 	tec_loc_espionage_nanoweapons:0 "Nanoweaponized Espionage"
 	tec_loc_espionage_terrorweapons:0 "Terror Attack"
 
-	mod_tec_espionage_technological_effect_mult:0 "Technological Espionage Strenght"
-	mod_tec_espionage_biological_effect_mult:0 "Biological Espionage Strenght"
-	mod_tec_espionage_psionics_effect_mult:0 "Psychological Espionage Strenght"
+	mod_tec_espionage_technological_effect_mult:0 "Technological Espionage Strength"
+	mod_tec_espionage_biological_effect_mult:0 "Biological Espionage Strength"
+	mod_tec_espionage_psionics_effect_mult:0 "Psychological Espionage Strength"
 
-	mod_tec_espionage_infiltration_effect_mult:0 "Infiltration Espionage Strenght"
-	mod_tec_espionage_political_effect_mult:0 "Political Espionage Strenght"
-	mod_tec_espionage_sabotage_effect_mult:0 "Sabotage Espionage Strenght"
-	mod_tec_espionage_warcrime_effect_mult:0 "War Espionage Strenght"
+	mod_tec_espionage_infiltration_effect_mult:0 "Infiltration Espionage Strength"
+	mod_tec_espionage_political_effect_mult:0 "Political Espionage Strength"
+	mod_tec_espionage_sabotage_effect_mult:0 "Sabotage Espionage Strength"
+	mod_tec_espionage_warcrime_effect_mult:0 "War Espionage Strength"
 
-	mod_tec_espionage_destructive_effect_mult:0 "Destructive Espionage Strenght"
-	mod_tec_espionage_cyberweapons_effect_mult:0 "Cyberwarfare Espionage Strenght"
-	mod_tec_espionage_bioweapons_effect_mult:0 "Bioweaponized Espionage Strenght"
-	mod_tec_espionage_nanoweapons_effect_mult:0 "Nanoweaponized Espionage Strenght"
-	mod_tec_espionage_terrorweapons_effect_mult:0 "Terror Attack Strenght"
+	mod_tec_espionage_destructive_effect_mult:0 "Destructive Espionage Strength"
+	mod_tec_espionage_cyberweapons_effect_mult:0 "Cyberwarfare Espionage Strength"
+	mod_tec_espionage_bioweapons_effect_mult:0 "Bioweaponized Espionage Strength"
+	mod_tec_espionage_nanoweapons_effect_mult:0 "Nanoweaponized Espionage Strength"
+	mod_tec_espionage_terrorweapons_effect_mult:0 "Terror Attack Strength"
 
 	mod_tec_espionage_technological_defense_mult:0 "Technological Espionage Deflection"
 	mod_tec_espionage_biological_defense_mult:0 "Biological Espionage Deflection"
@@ -237,7 +237,7 @@
 
 	mod_tec_espionage_counterespionage_chance_mult:0 "Counterespionage Chance"
 	mod_tec_espionage_counterespionage_prevention_mult:0 "Counterespionage Deflection"
-	mod_tec_espionage_counterespionage_vendetta_mult:0 "Counterespionage Vendetta Strenght"
+	mod_tec_espionage_counterespionage_vendetta_mult:0 "Counterespionage Vendetta Strength"
 	mod_tec_espionage_counterespionage_antivendetta_mult:0 "Counterespionage Vendetta Mitigation"
  # /
  # --------------- Leader changes
