hab fixes + extraction district res tooltips

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -225,6 +225,18 @@ l_english:
 	# /
  # /
  # ------------------------------------------------- Hive World
+	# Situation
+
+	# /
+
+	# Events
+
+	# /
+	# Modifiers
+		pm_tec_gene_bad_planet:0 "Unleashed Virus"
+		pm_tec_gene_bad_planet_desc:0 "§EJust a little cough...§!."
+	# /
+
 	district_tec_hive_arcology_housing:0 "Dwelling Chamber"
 	district_tec_hive_arcology_housing_plural:0 "$district_tec_hive_arcology_housing$s"
 	district_tec_hive_arcology_housing_desc:0 "TO DO"
@@ -726,6 +738,10 @@ l_english:
 	#$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
 	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
 	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
+
+	district_tec_hab_extraction_no_energy:0 "§Y$tec_loc_c_warning$ - $tec_loc_energy$ passive production has been redirected to $district_hab_energ$s§!."
+	district_tec_hab_extraction_no_minerals:0 "§Y$tec_loc_c_warning$ - $tec_loc_minerals$ passive production has been redirected to $district_hab_mining$s§!."
+	district_tec_hab_extraction_no_food:0 "§Y$tec_loc_c_warning$ - $tec_loc_food$ passive production has been redirected to $district_tec_hab_food$s§!."
 
 	# Energy
 	district_hab_energy_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_energy$§! based on the the number of §YOrbitals§! of its type (£energy£)"
