Bionic changes + tinker alloy building fix

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1113,7 +1113,7 @@
 		tec_loc_assimilation_type_biopsionic:0 "§HBio-Psionic Assimilation§!"
 		tec_loc_assimilation_type_cyberpsionic:0 "§HCyber-Psionic Assimilation§!"
 		tec_loc_assimilation_type_replicant:0 "§HBiomechanical Assimilation§!"
-		tec_loc_assimilation_type_bionic:0 "§HBionic Assimilation§!"
+		tec_loc_assimilation_type_bioware:0 "§HBioware Assimilation§!"
 		tec_loc_assimilation_type_biogenic:0 "§HMutagenic Assimilation§!"
 		tec_loc_assimilation_type_psychic:0 "§HPsychic Assimilation§!"
 		tec_loc_assimilation_type_ethereal:0 "§HConsciousness Assimilation§!"
@@ -1323,33 +1323,33 @@
 	living_standard_tec_assimilation_psychic_hivemind_tooltip:0 "This species is being §MPsychically Entangled§! with the collective.\n\n$tec_loc_assimilation_type_psychic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_psychic_hivemind_tooltip_delayed:0 "§LThe collective will absorb the psychic potential of any individual, they will be part of our great mind, they will contribute and be one.§!"
 
-	living_standard_tec_assimilation_bionic:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_machine:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_machine_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_machine_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_machine:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_machine_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_machine_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_hive:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_hive_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_hive_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_hive:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_hive_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_hive_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_upgrade:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_upgrade_machine:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_machine_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_machine_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_machine:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_machine_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_machine_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_upgrade_hive:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_hive_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_hive_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_hive:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_hive_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_upgrade_hive_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_total:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_total_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_total_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_total:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_total_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bioware_total_tooltip_delayed:0 "REPLACE_ME"
 
 	living_standard_tec_assimilation_ethereal_total:0 "REPLACE_ME"
 	living_standard_tec_assimilation_ethereal_total_tooltip:0 "REPLACE_ME"
@@ -1802,7 +1802,7 @@
 	ap_tec_cybernetic_b_t1:0 "Enhanced Bioimplants"
 	ap_tec_cybernetic_b_t1_desc:0 "TO DO."
 
-	ap_tec_cybernetic_b_t2:0 "Upgraded Bionics"
+	ap_tec_cybernetic_b_t2:0 "Upgraded Bioware"
 	ap_tec_cybernetic_b_t2_desc:0 "TO DO."
 # /
 
