--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -572,7 +572,7 @@
 
 	ap_tec_equilibrium_path_t2:0 "Ahead of Limits"
 	ap_tec_equilibrium_path_t2_desc:0 "to do"
-# biotic vs bionic parts
+# biotic vs bioware parts
 
 	ap_tec_equilibrium_path_t3:0 "Balance of the Whole"
 	ap_tec_equilibrium_path_t3_desc:0 "to do"
