--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -80,10 +80,10 @@
 	TEC_ASSIMILATION_ALREADY_BIOPSIONIC:0 "$TRIGGER_FAIL$Already §YPure of Form§! species cannot be assimilated."
  # Replicant
 	TEC_REPLICANT_ASSIMILATION_NOT_MAIN:0 "$TRIGGER_FAIL$Only non §YReplicant§! species can be assimilated."
- # Bionic
-	TEC_ASSIMILATION_WILL_GAIN_BIONIC_TRAIT:0 "This species will be §YBionically§! improved."
-	TEC_ASSIMILATION_ALREADY_BIONIC:0 "$TRIGGER_FAIL$Already improved by §YBionic§! implants, cannot be assimilated."
-	TEC_ASSIMILATION_WILL_LOSE_BIONIC_TRAIT:0 "This species will get free of its §YBionic§! implants."
+ # Bioware
+	TEC_ASSIMILATION_WILL_GAIN_BIOWARE_TRAIT:0 "This species will be improved with §YBionware§!."
+	TEC_ASSIMILATION_ALREADY_BIOWARE:0 "$TRIGGER_FAIL$Already improved by §YBioware§! implants, cannot be assimilated."
+	TEC_ASSIMILATION_WILL_LOSE_BIOWARE_TRAIT:0 "This species will get free of its §YBioware§! implants."
  # Biogenic
 	TEC_ASSIMILATION_BIOGENIC_XENOCYTES:0 "This species can be harvested for §YBio-Mutagenically§! improved."
 	TEC_ASSIMILATION_WILL_GAIN_BIOGENIC_TRAIT:0 "This species will be §YBio-Mutagenically§! improved."
