Added support for mdos to add swaps easily and placeholder generation

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1881,7 +1881,7 @@
 
 	civic_private_healthcare_corporate:1 "§P£tec_civic_job£§!Pharma State"
 	civic_private_healthcare_corporate_desc:1 "['concept_tec_feature_civic']\n\nA strong nation is a healthy nation. This megacorporation maintains a robust economy through experimental drugs, highly privatized clinics, and aggressive marketing campaigns."
-	civic_tooltip_civic_private_healthcare_corporate_effects:2 "$tec_loc_c_unlocks_branch$ §H£building£ $building_corporate_clinics$§!\n§Y£building£ $building_corporate_clinics$§! bring the effects of £building£ §Y$building_clinic$§! to $tec_loc_trade_icon$ Branch Offices.\n\n$tec_loc_c_modifiers$\n- Leader lifespan: §G+10§!\n- $r_amenities$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n- $r_trade_value$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!"
+	civic_tooltip_civic_private_healthcare_corporate_effects:2 "$tec_loc_c_unlocks_branch$ §H£building£ $building_corporate_clinics$§!\n§Y£building£ $building_corporate_clinics$§! bring the effects of £building£ §Y$building_clinic$§! to $tec_loc_trade_icon$ Branch Offices.\n\n$tec_loc_c_modifiers$\n- $MOD_LEADER_AGE$: §G+10§!\n- $r_amenities$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n- $r_trade_value$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!"
  # /
  # Evolved
 	# Seekers and labrats indicated with normal civics
