Expanded eco category for other mods that need em (giga) and adjusted some inline names

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -386,6 +386,18 @@
  district_bioforge_stomach: "Alloy Drone District"
  district_bioforge_stomach_desc: "Numerous Alloys Drones work in tandem to create a high amount of alloys."
  district_bioforge_stomach_plural: "Bio-Forge Foundry Districts"
+ district_giga_frameworld_foundry: "REPLACE_ME"
+ district_giga_frameworld_foundry_desc: "REPLACE_ME"
+ district_giga_frameworld_foundry_plural: "REPLACE_ME"
+ district_giga_frameworld_foundry_advanced: "REPLACE_ME"
+ district_giga_frameworld_foundry_advanced_desc: "REPLACE_ME"
+ district_giga_frameworld_foundry_advanced_plural: "REPLACE_ME"
+ district_giga_frameworld_factory: "REPLACE_ME"
+ district_giga_frameworld_factory_desc: "REPLACE_ME"
+ district_giga_frameworld_factory_plural: "REPLACE_ME"
+ district_giga_frameworld_factory_advanced: "REPLACE_ME"
+ district_giga_frameworld_factory_advanced_desc: "REPLACE_ME"
+ district_giga_frameworld_factory_advanced_plural: "REPLACE_ME"
  district_giga_frameworld_industrial: "$district_industrial$"
  district_giga_frameworld_industrial_desc: "$district_industrial_desc$"
  district_giga_frameworld_industrial_plural: "$district_industrial_plural$"
