--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -45,7 +45,7 @@
  tr_harmony_federations_finish_desc:0 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!.\nGrants access to the §Y$spiritualist_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
 
 # ------------------------------------------------- Mercantile
- tr_mercantile_trickle_up_economics_desc: "§YCity Districts§! provide §Y1§! additional £job_clerk£ §Y$job_clerk$ Job§!.\nHabitat §Y$district_hab_commercial_plural$§! and §Y$district_tec_hab_arcology_trade_plural$§!, Ring World §Y$district_rw_city_plural$§! and §Y$district_tec_rw_trade_plural$§! and Ecumenopolis §Y$district_arcology_housing_plural$§! and §Y$district_tec_arcology_trade_plural$§! also produce additional £job_clerk£ §Y$job_clerk$ Jobs§!."
+ tr_mercantile_trickle_up_economics_desc: ""
  tr_mercantile_trickle_up_economics_gestalt:0 "Within Cells Interlinked"
  tr_mercantile_trickle_up_economics_gestalt_desc:0 "$mod_planet_maintenancedrones_trade_value_produces_add$: §G+2§!"
  tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
